# aic-sdk-rs

./: .gitattributes  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  NOTICE.txt  README.md  about.hbs  about.toml  taplo.toml
.github/workflows/: build.yml  check-aic-h.yml  check-header.yml  check-notice.yml  check-versions.yml  linking.yml  quality.yml  release.yml  tests.yml
aic-model-downloader/: Cargo.toml  README.md
aic-model-downloader/src/: lib.rs  manifest.rs
aic-sdk-sys/: Cargo.toml  NOTICE.libaic.txt  README.md  bindgen.sh  build.rs  checksum.txt
aic-sdk-sys/build-utils/: downloader.rs  patch-linux.rs  patch-macos.rs  patch-windows.rs  runtime_linking.rs
aic-sdk-sys/include/: aic.h  wrapper.h
aic-sdk-sys/src/: bindings.rs  lib.rs
examples/: README.md  analyze_file.rs  basic_usage.rs  benchmark.rs  parallel_async.rs
examples/build-time-download/: Cargo.toml  README.md  build.rs
examples/build-time-download/src/: main.rs
reference/: manifest.json
scripts/: generate-notice.sh
src/: analyzer.rs  download.rs  error.rs  file_analyzer.rs  lib.rs  model.rs  processor.rs  processor_async.rs  vad.rs
src/download/: manifest.rs  mod.rs
tests/: end2end.rs
tests/data/: vad_results.json
