[workspace]
members = ["aic-sdk-sys"]

[workspace.dependencies]
aic-sdk-sys = { version = "0.13.0", path = "aic-sdk-sys" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.148" }
sha2 = { version = "0.10" }
ureq = { version = "3.1.4", default-features = false }

[package]
categories = ["multimedia::audio"]
description = "ai-coustics Speech Enhancement SDK"
documentation = "https://docs.rs/aic-sdk"
edition = "2024"
exclude = [".github"]
homepage = "https://ai-coustics.com/sdk/"
keywords = ["cancellation", "enhancement", "noise", "speech", "voice"]
license = "Apache-2.0"
name = "aic-sdk"
readme = "README.md"
repository = "https://github.com/ai-coustics/aic-sdk-rs"
version = "0.13.0"

[dependencies]
aic-sdk-sys = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
thiserror = "2.0.17"
ureq = { workspace = true, optional = true, features = ["rustls"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
download-lib = ["aic-sdk-sys/download-lib"]
download-model = ["dep:serde", "dep:serde_json", "dep:sha2", "dep:ureq"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
