[workspace]
members = ["aic-sdk-sys", "examples/build-time-download"]

[workspace.package]
edition = "2024"
homepage = "https://ai-coustics.com/sdk/"
license = "Apache-2.0"
repository = "https://github.com/ai-coustics/aic-sdk-rs"
version = "0.17.1"

[workspace.dependencies]
aic-sdk-sys = { version = "0.17.1", path = "aic-sdk-sys" }
async-lock = "3"
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
rayon = "1"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
thiserror = "2.0"
tokio = { version = "1" }
ureq = { version = "3.1", default-features = false }

[package]
categories = ["multimedia::audio"]
description = "ai-coustics Speech Enhancement SDK"
documentation = "https://docs.rs/aic-sdk"
edition.workspace = true
exclude = [".github"]
homepage.workspace = true
keywords = ["audio", "enhancement", "noise", "speech", "voice"]
license.workspace = true
name = "aic-sdk"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
aic-sdk-sys = { workspace = true }
async-lock = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }
ureq = { workspace = true, optional = true, features = ["rustls"] }

[dev-dependencies]
approx = "0.5"
audio-file = "0.4.1"
futures = "0.3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[features]
async = ["dep:async-lock", "dep:futures-channel", "dep:rayon"]
download-lib = ["aic-sdk-sys/download-lib"]
download-model = ["dep:serde", "dep:serde_json", "dep:sha2", "dep:ureq"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["download-model"]

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
required-features = ["download-model"]

[[example]]
name = "parallel_async"
path = "examples/parallel_async.rs"
required-features = ["async", "download-model"]
