[package]
edition.workspace = true
homepage.workspace = true
name = "aic-model-downloader"
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "3.1", features = ["rustls"] }
