[package]
categories = ["multimedia::audio"]
description = "ai-coustics Speech Enhancement SDK"
documentation = "https://docs.rs/aic-sdk-sys"
edition = "2024"
exclude = [".github"]
homepage = "https://ai-coustics.com/sdk/"
keywords = ["cancellation", "enhancement", "noise", "speech", "voice"]
license = "Apache-2.0"
name = "aic-sdk-sys"
readme = "README.md"
repository = "https://github.com/ai-coustics/aic-sdk-rs"
version = "0.6.3"

[package.metadata.docs.rs]
features = ["download-lib"]

[features]
download-lib = ["dep:flate2", "dep:sha2", "dep:tar", "dep:ureq", "dep:zip"]

[build-dependencies]
bindgen = "0.72"
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
ureq = { version = "3.1", optional = true, default-features = false, features = [
  "rustls",
  "socks-proxy",
] }
zip = { version = "2.1", optional = true }
