[package]
categories = ["multimedia::audio"]
description = "ai-coustics Speech Enhancement SDK"
documentation = "https://docs.rs/aic-sdk-sys"
edition.workspace = true
exclude = [".github"]
homepage.workspace = true
keywords = ["cancellation", "enhancement", "noise", "speech", "voice"]
license.workspace = true
name = "aic-sdk-sys"
readme = "README.md"
repository.workspace = true
version = "0.13.1"

[package.metadata.docs.rs]
features = ["download-lib"]

[features]
download-lib = ["dep:flate2", "dep:sha2", "dep:tar", "dep:ureq", "dep:zip"]

[build-dependencies]
bindgen = "0.72"
flate2 = { version = "1.1", optional = true }
sha2 = { workspace = true, optional = true }
tar = { version = "0.4", optional = true }
ureq = { workspace = true, optional = true, features = ["rustls"] }
zip = { version = "7.0", optional = true }

# cargo shear can not track optional build dependencies
[package.metadata.cargo-shear]
ignored = ["flate2", "sha2", "tar", "ureq", "zip"]
