[package]
categories = ["multimedia::audio"]
description = "ai-coustics Speech Enhancement SDK"
documentation = "https://docs.rs/aic-sdk-sys"
edition.workspace = true
exclude = [".github"]
homepage.workspace = true
keywords = ["cancellation", "enhancement", "noise", "speech", "voice"]
license.workspace = true
name = "aic-sdk-sys"
readme = "README.md"
repository.workspace = true
version = "0.19.2"

[package.metadata.docs.rs]
features = ["download-lib", "runtime-linking"]

[features]
download-lib = ["dep:flate2", "dep:sha2", "dep:tar", "dep:ureq", "dep:zip"]
dynamic-linking = []
runtime-linking = ["dep:libloading"]

[dependencies]
libloading = { version = "0.8", optional = true }

[[test]]
name = "downloader"
path = "build-utils/downloader.rs"

[build-dependencies]
bindgen = "0.72"
flate2 = { version = "1.1", optional = true }
sha2 = { workspace = true, optional = true }
tar = { version = "0.4", optional = true }
ureq = { workspace = true, optional = true, features = ["rustls"] }
zip = { version = "7.0", optional = true }

[dev-dependencies]
flate2 = "1.1"
sha2.workspace = true
tar = "0.4"
ureq = { workspace = true, features = ["rustls"] }
zip = "7.0"

# cargo shear can not track optional build dependencies
[package.metadata.cargo-shear]
ignored = ["flate2", "sha2", "tar", "ureq", "zip"]
